test/link/script-missing-bank-no.link
rom0
romx
vram
sram
wram0
wramx
oam
hram
